--- a/config/nginx/zweb-builder-frontend.conf
+++ b/config/nginx/zweb-builder-frontend.conf
@@ -1,7 +1,7 @@
 server {
     listen 8000 default_server;
     server_name localhost;
-    root /opt/illa/illa-builder-frontend/;
+    root /opt/zweb/zweb-builder-frontend/;
     index index.html;
     gzip on;
 
@@ -11,7 +11,7 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-Forwarded-Host $host;
     proxy_set_header Accept-Encoding "";
-    proxy_temp_path /opt/illa/nginx/temp 1 2;
+    proxy_temp_path /opt/zweb/nginx/temp 1 2;
 
 
     sub_filter_once off;
